concession-kiosk-kustomize-demo/overlays/db/network-policy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: db-policy
  namespace: concession-kiosk-db
spec:
  podSelector:
    matchLabels:
      role: mongodb
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          project: concession-kiosk-app
    - podSelector:
        matchLabels:
          deployment: backend
    ports:
    - protocol: TCP
      port: 27017
